feat: update to JDK 24, switch to Redisson client and improve CI/CD
- Replaces Lettuce with Redisson for Redis communication
- Remove custom lock algorithm with Redisson distributed lock for scraping BDOCodex when running replicated
- Added gradle plugin for automated version catalog updates (plugins and libraries) and release management
- Added ./docker folder with example compose setup and remove nginx example