@@ -1,6 +1,6 @@
 package io.arsha.api.config;
 
-import java.util.concurrent.Executor;
+import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -11,13 +11,12 @@ import org.springframework.context.event.SimpleApplicationEventMulticaster;
 public class AsyncConfiguration {
 
     @Bean
-    public Executor asyncExecutor() {
-        var factory = Thread.ofVirtual().factory();
-        return Executors.newCachedThreadPool(factory);
+    public ExecutorService asyncExecutor() {
+        return Executors.newVirtualThreadPerTaskExecutor();
     }
 
     @Bean
-    public ApplicationEventMulticaster applicationEventMulticaster(Executor asyncExecutor) {
+    public ApplicationEventMulticaster applicationEventMulticaster(ExecutorService asyncExecutor) {
         var eventMulticaster = new SimpleApplicationEventMulticaster();
         eventMulticaster.setTaskExecutor(asyncExecutor);
         return eventMulticaster;
